# edge-detection

./: .gitignore  CMakeLists.txt  README.md  algorithms.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
